--- a/calendrier.html
+++ b/calendrier.html
@@ -5526,10 +5526,12 @@
                             `}
                         </td>
                         <td data-column="Observations">
-                            <div class="observation-content editable-observations"
+                            <!-- DIV avec auto-expansion -->
+                            <div class="observation-content auto-expand-textarea"
                                  contenteditable="true"
                                  data-field="observations"
-                                 style="min-height: 60px; padding: 8px; border: 1px solid #ccc; border-radius: 4px; background: white; overflow-y: auto; max-height: 200px; white-space: pre-wrap; line-height: 1.4;">
+                                 style="min-height: 60px; padding: 8px; border: 1px solid #ccc; border-radius: 4px; background: white; white-space: pre-wrap; overflow: hidden; resize: vertical;"
+                                 oninput="autoExpandTextarea(this)">
                                 ${event.Observations || ''}
                             </div>
 
