--- a/calendrier.html
+++ b/calendrier.html
@@ -6530,22 +6530,29 @@
 
                 }); // Fermeture du forEach(event => { ... });
 
-                // Fonction pour auto-expander les textareas d'observations
-                function autoExpandTextarea(textarea) {
-                    // Réinitialiser les dimensions
-                    textarea.style.height = 'auto';
-                    textarea.style.width = 'auto';
+                // Fonction pour auto-expander les éléments d'observations
+                function autoExpandTextarea(element) {
+                    // Pour les DIV contenteditable, utilise simplement scrollHeight
+                    if (element.tagName === 'DIV') {
+                        element.style.height = 'auto';
+                        const neededHeight = element.scrollHeight;
+                        // Même limite que les textarea : max 250px
+                        element.style.height = Math.min(neededHeight, 250) + 'px';
+                        // Pas de défilement
+                        element.style.overflowY = 'hidden';
+                    }
+                    // Pour les TEXTAREA, garde ton code original
+                    else if (element.tagName === 'TEXTAREA') {
+                        // Ton code original :
+                        element.style.height = 'auto';
+                        element.style.width = 'auto';
+                        const neededHeight = element.scrollHeight;
+                        const currentWidth = parseFloat(getComputedStyle(element).width);
+                        const newWidth = currentWidth + (neededHeight - parseFloat(getComputedStyle(element).height));
 
-                    // Obtenir la hauteur nécessaire pour le contenu
-                    const neededHeight = textarea.scrollHeight;
-
-                    // Calculer la largeur correspondante (ajoute la même valeur qu'en hauteur)
-                    const currentWidth = parseFloat(getComputedStyle(textarea).width);
-                    const newWidth = currentWidth + (neededHeight - parseFloat(getComputedStyle(textarea).height));
-
-                    // Appliquer les nouvelles dimensions (avec limites raisonnables)
-                    textarea.style.height = Math.min(neededHeight, 250) + 'px'; // Max 400px
-                    textarea.style.width = Math.max(newWidth, 200) + 'px';      // Min 200px, s'élargit avec la hauteur
+                        element.style.height = Math.min(neededHeight, 250) + 'px';
+                        element.style.width = Math.max(newWidth, 200) + 'px';
+                    }
                 }
 
                 // Initialiser l'auto-expansion pour tous les textareas
